include_HEADERS = \
		  odp_api.h

odpincludedir= $(includedir)/odp
odpinclude_HEADERS = \
		  odp/autoheader_external.h \
		  odp/visibility_begin.h \
		  odp/visibility_end.h

odpapiincludedir= $(includedir)/odp/api/
odpapiinclude_HEADERS = \
	odp/api/align.h \
	odp/api/atomic.h \
	odp/api/barrier.h \
	odp/api/buffer.h \
	odp/api/byteorder.h \
	odp/api/chksum.h \
	odp/api/classification.h \
	odp/api/comp.h \
	odp/api/cpu.h \
	odp/api/cpumask.h \
	odp/api/crypto.h \
	odp/api/debug.h \
	odp/api/deprecated.h \
	odp/api/dma.h \
	odp/api/dma_types.h \
	odp/api/errno.h \
	odp/api/event.h \
	odp/api/event_types.h \
	odp/api/hash.h \
	odp/api/hints.h \
	odp/api/init.h \
	odp/api/ipsec.h \
	odp/api/ipsec_types.h \
	odp/api/packet.h \
	odp/api/packet_types.h \
	odp/api/packet_flags.h \
	odp/api/packet_io.h \
	odp/api/packet_io_types.h \
	odp/api/packet_io_stats.h \
	odp/api/protocols.h \
	odp/api/pool.h \
	odp/api/pool_types.h \
	odp/api/proto_stats.h \
	odp/api/proto_stats_types.h \
	odp/api/queue.h \
	odp/api/queue_types.h \
	odp/api/random.h \
	odp/api/random_types.h \
	odp/api/reassembly.h \
	odp/api/rwlock.h \
	odp/api/rwlock_recursive.h \
	odp/api/schedule.h \
	odp/api/schedule_types.h \
	odp/api/shared_memory.h \
	odp/api/spinlock.h \
	odp/api/spinlock_recursive.h \
	odp/api/stash.h \
	odp/api/stash_types.h \
	odp/api/std.h \
	odp/api/std_types.h \
	odp/api/sync.h \
	odp/api/system_info.h \
	odp/api/thread.h \
	odp/api/threshold.h \
	odp/api/thrmask.h \
	odp/api/ticketlock.h \
	odp/api/time.h \
	odp/api/timer.h \
	odp/api/timer_types.h \
	odp/api/traffic_mngr.h \
	odp/api/version.h

odpapispecincludedir= $(includedir)/odp/api/spec
odpapispecinclude_HEADERS = \
		  odp/api/spec/align.h \
		  odp/api/spec/atomic.h \
		  odp/api/spec/barrier.h \
		  odp/api/spec/buffer.h \
		  odp/api/spec/byteorder.h \
		  odp/api/spec/chksum.h \
		  odp/api/spec/classification.h \
		  odp/api/spec/comp.h \
		  odp/api/spec/cpu.h \
		  odp/api/spec/cpumask.h \
		  odp/api/spec/crypto.h \
		  odp/api/spec/debug.h \
		  odp/api/spec/dma.h \
		  odp/api/spec/dma_types.h \
		  odp/api/spec/errno.h \
		  odp/api/spec/event.h \
		  odp/api/spec/event_types.h \
		  odp/api/spec/hash.h \
		  odp/api/spec/hints.h \
		  odp/api/spec/init.h \
		  odp/api/spec/ipsec.h \
		  odp/api/spec/ipsec_types.h \
		  odp/api/spec/packet.h \
		  odp/api/spec/packet_types.h \
		  odp/api/spec/packet_flags.h \
		  odp/api/spec/packet_io.h \
		  odp/api/spec/packet_io_types.h \
		  odp/api/spec/packet_io_stats.h \
		  odp/api/spec/protocols.h \
		  odp/api/spec/pool.h \
		  odp/api/spec/pool_types.h \
		  odp/api/spec/proto_stats.h \
		  odp/api/spec/proto_stats_types.h \
		  odp/api/spec/queue.h \
		  odp/api/spec/queue_types.h \
		  odp/api/spec/random.h \
		  odp/api/spec/random_types.h \
		  odp/api/spec/reassembly.h \
		  odp/api/spec/rwlock.h \
		  odp/api/spec/rwlock_recursive.h \
		  odp/api/spec/schedule.h \
		  odp/api/spec/schedule_types.h \
		  odp/api/spec/shared_memory.h \
		  odp/api/spec/spinlock.h \
		  odp/api/spec/spinlock_recursive.h \
		  odp/api/spec/stash.h \
		  odp/api/spec/stash_types.h \
		  odp/api/spec/std.h \
		  odp/api/spec/std_types.h \
		  odp/api/spec/sync.h \
		  odp/api/spec/system_info.h \
		  odp/api/spec/thread.h \
		  odp/api/spec/thread_types.h \
		  odp/api/spec/threshold.h \
		  odp/api/spec/thrmask.h \
		  odp/api/spec/ticketlock.h \
		  odp/api/spec/time.h \
		  odp/api/spec/timer.h \
		  odp/api/spec/timer_types.h \
		  odp/api/spec/traffic_mngr.h

nodist_odpapispecinclude_HEADERS = \
		  odp/api/spec/deprecated.h \
		  odp/api/spec/version.h

odpapiabidefaultincludedir= $(includedir)/odp/api/abi-default
odpapiabidefaultinclude_HEADERS = \
	odp/api/abi-default/align.h \
	odp/api/abi-default/atomic.h \
	odp/api/abi-default/barrier.h \
	odp/api/abi-default/buffer.h \
	odp/api/abi-default/byteorder.h \
	odp/api/abi-default/classification.h \
	odp/api/abi-default/comp.h \
	odp/api/abi-default/cpu.h \
	odp/api/abi-default/cpumask.h \
	odp/api/abi-default/crypto.h \
	odp/api/abi-default/debug.h \
	odp/api/abi-default/dma_types.h \
	odp/api/abi-default/errno.h \
	odp/api/abi-default/event.h \
	odp/api/abi-default/event_types.h \
	odp/api/abi-default/hash.h \
	odp/api/abi-default/init.h \
	odp/api/abi-default/ipsec.h \
	odp/api/abi-default/ipsec_types.h \
	odp/api/abi-default/packet.h \
	odp/api/abi-default/packet_types.h \
	odp/api/abi-default/packet_flags.h \
	odp/api/abi-default/packet_io.h \
	odp/api/abi-default/packet_io_types.h \
	odp/api/abi-default/proto_stats.h \
	odp/api/abi-default/proto_stats_types.h \
	odp/api/abi-default/pool.h \
	odp/api/abi-default/pool_types.h \
	odp/api/abi-default/queue.h \
	odp/api/abi-default/queue_types.h \
	odp/api/abi-default/random.h \
	odp/api/abi-default/rwlock.h \
	odp/api/abi-default/rwlock_recursive.h \
	odp/api/abi-default/schedule.h \
	odp/api/abi-default/schedule_types.h \
	odp/api/abi-default/shared_memory.h \
	odp/api/abi-default/spinlock.h \
	odp/api/abi-default/spinlock_recursive.h \
	odp/api/abi-default/stash.h \
	odp/api/abi-default/stash_types.h \
	odp/api/abi-default/std.h \
	odp/api/abi-default/std_types.h \
	odp/api/abi-default/sync.h \
	odp/api/abi-default/thread.h \
	odp/api/abi-default/thrmask.h \
	odp/api/abi-default/ticketlock.h \
	odp/api/abi-default/time.h \
	odp/api/abi-default/timer.h \
	odp/api/abi-default/timer_types.h \
	odp/api/abi-default/traffic_mngr.h \
	odp/api/abi-default/version.h

# Install ABI headers only if required
if ODP_ABI_COMPAT

odpapiabiarchincludedir = $(archincludedir)/odp/api/abi
if ARCH_IS_ARM
odpapiabiarchinclude_HEADERS = \
	odp/arch/arm32-linux/odp/api/abi/align.h \
	odp/arch/arm32-linux/odp/api/abi/atomic.h \
	odp/arch/arm32-linux/odp/api/abi/barrier.h \
	odp/arch/arm32-linux/odp/api/abi/buffer.h \
	odp/arch/arm32-linux/odp/api/abi/byteorder.h \
	odp/arch/arm32-linux/odp/api/abi/classification.h \
	odp/arch/arm32-linux/odp/api/abi/comp.h \
	odp/arch/arm32-linux/odp/api/abi/cpu.h \
	odp/arch/arm32-linux/odp/api/abi/cpumask.h \
	odp/arch/arm32-linux/odp/api/abi/crypto.h \
	odp/arch/arm32-linux/odp/api/abi/debug.h \
	odp/arch/arm32-linux/odp/api/abi/dma_types.h \
	odp/arch/arm32-linux/odp/api/abi/errno.h \
	odp/arch/arm32-linux/odp/api/abi/event.h \
	odp/arch/arm32-linux/odp/api/abi/event_types.h \
	odp/arch/arm32-linux/odp/api/abi/hash.h \
	odp/arch/arm32-linux/odp/api/abi/init.h \
	odp/arch/arm32-linux/odp/api/abi/ipsec.h \
	odp/arch/arm32-linux/odp/api/abi/ipsec_types.h \
	odp/arch/arm32-linux/odp/api/abi/packet.h \
	odp/arch/arm32-linux/odp/api/abi/packet_types.h \
	odp/arch/arm32-linux/odp/api/abi/packet_flags.h \
	odp/arch/arm32-linux/odp/api/abi/packet_io.h \
	odp/arch/arm32-linux/odp/api/abi/packet_io_types.h \
	odp/arch/arm32-linux/odp/api/abi/pool.h \
	odp/arch/arm32-linux/odp/api/abi/pool_types.h \
	odp/arch/arm32-linux/odp/api/abi/proto_stats.h \
	odp/arch/arm32-linux/odp/api/abi/proto_stats_types.h \
	odp/arch/arm32-linux/odp/api/abi/queue.h \
	odp/arch/arm32-linux/odp/api/abi/queue_types.h \
	odp/arch/arm32-linux/odp/api/abi/random.h \
	odp/arch/arm32-linux/odp/api/abi/rwlock.h \
	odp/arch/arm32-linux/odp/api/abi/rwlock_recursive.h \
	odp/arch/arm32-linux/odp/api/abi/schedule.h \
	odp/arch/arm32-linux/odp/api/abi/schedule_types.h \
	odp/arch/arm32-linux/odp/api/abi/shared_memory.h \
	odp/arch/arm32-linux/odp/api/abi/spinlock.h \
	odp/arch/arm32-linux/odp/api/abi/spinlock_recursive.h \
	odp/arch/arm32-linux/odp/api/abi/stash.h \
	odp/arch/arm32-linux/odp/api/abi/stash_types.h \
	odp/arch/arm32-linux/odp/api/abi/std.h \
	odp/arch/arm32-linux/odp/api/abi/std_types.h \
	odp/arch/arm32-linux/odp/api/abi/sync.h \
	odp/arch/arm32-linux/odp/api/abi/thread.h \
	odp/arch/arm32-linux/odp/api/abi/thrmask.h \
	odp/arch/arm32-linux/odp/api/abi/ticketlock.h \
	odp/arch/arm32-linux/odp/api/abi/time.h \
	odp/arch/arm32-linux/odp/api/abi/timer.h \
	odp/arch/arm32-linux/odp/api/abi/timer_types.h \
	odp/arch/arm32-linux/odp/api/abi/traffic_mngr.h \
	odp/arch/arm32-linux/odp/api/abi/version.h
endif
if ARCH_IS_AARCH64
odpapiabiarchinclude_HEADERS = \
	odp/arch/arm64-linux/odp/api/abi/align.h \
	odp/arch/arm64-linux/odp/api/abi/atomic.h \
	odp/arch/arm64-linux/odp/api/abi/barrier.h \
	odp/arch/arm64-linux/odp/api/abi/buffer.h \
	odp/arch/arm64-linux/odp/api/abi/byteorder.h \
	odp/arch/arm64-linux/odp/api/abi/classification.h \
	odp/arch/arm64-linux/odp/api/abi/comp.h \
	odp/arch/arm64-linux/odp/api/abi/cpu.h \
	odp/arch/arm64-linux/odp/api/abi/cpumask.h \
	odp/arch/arm64-linux/odp/api/abi/crypto.h \
	odp/arch/arm64-linux/odp/api/abi/debug.h \
	odp/arch/arm64-linux/odp/api/abi/dma_types.h \
	odp/arch/arm64-linux/odp/api/abi/errno.h \
	odp/arch/arm64-linux/odp/api/abi/event.h \
	odp/arch/arm64-linux/odp/api/abi/event_types.h \
	odp/arch/arm64-linux/odp/api/abi/hash.h \
	odp/arch/arm64-linux/odp/api/abi/init.h \
	odp/arch/arm64-linux/odp/api/abi/ipsec.h \
	odp/arch/arm64-linux/odp/api/abi/ipsec_types.h \
	odp/arch/arm64-linux/odp/api/abi/packet.h \
	odp/arch/arm64-linux/odp/api/abi/packet_types.h \
	odp/arch/arm64-linux/odp/api/abi/packet_flags.h \
	odp/arch/arm64-linux/odp/api/abi/packet_io.h \
	odp/arch/arm64-linux/odp/api/abi/packet_io_types.h \
	odp/arch/arm64-linux/odp/api/abi/pool.h \
	odp/arch/arm64-linux/odp/api/abi/pool_types.h \
	odp/arch/arm64-linux/odp/api/abi/proto_stats.h \
	odp/arch/arm64-linux/odp/api/abi/proto_stats_types.h \
	odp/arch/arm64-linux/odp/api/abi/queue.h \
	odp/arch/arm64-linux/odp/api/abi/queue_types.h \
	odp/arch/arm64-linux/odp/api/abi/random.h \
	odp/arch/arm64-linux/odp/api/abi/rwlock.h \
	odp/arch/arm64-linux/odp/api/abi/rwlock_recursive.h \
	odp/arch/arm64-linux/odp/api/abi/schedule.h \
	odp/arch/arm64-linux/odp/api/abi/schedule_types.h \
	odp/arch/arm64-linux/odp/api/abi/shared_memory.h \
	odp/arch/arm64-linux/odp/api/abi/spinlock.h \
	odp/arch/arm64-linux/odp/api/abi/spinlock_recursive.h \
	odp/arch/arm64-linux/odp/api/abi/stash.h \
	odp/arch/arm64-linux/odp/api/abi/stash_types.h \
	odp/arch/arm64-linux/odp/api/abi/std.h \
	odp/arch/arm64-linux/odp/api/abi/std_types.h \
	odp/arch/arm64-linux/odp/api/abi/sync.h \
	odp/arch/arm64-linux/odp/api/abi/thread.h \
	odp/arch/arm64-linux/odp/api/abi/thrmask.h \
	odp/arch/arm64-linux/odp/api/abi/ticketlock.h \
	odp/arch/arm64-linux/odp/api/abi/time.h \
	odp/arch/arm64-linux/odp/api/abi/timer.h \
	odp/arch/arm64-linux/odp/api/abi/timer_types.h \
	odp/arch/arm64-linux/odp/api/abi/traffic_mngr.h \
	odp/arch/arm64-linux/odp/api/abi/version.h
endif
if ARCH_IS_DEFAULT
odpapiabiarchinclude_HEADERS = \
	odp/arch/default-linux/odp/api/abi/align.h \
	odp/arch/default-linux/odp/api/abi/atomic.h \
	odp/arch/default-linux/odp/api/abi/barrier.h \
	odp/arch/default-linux/odp/api/abi/buffer.h \
	odp/arch/default-linux/odp/api/abi/byteorder.h \
	odp/arch/default-linux/odp/api/abi/classification.h \
	odp/arch/default-linux/odp/api/abi/comp.h \
	odp/arch/default-linux/odp/api/abi/cpu.h \
	odp/arch/default-linux/odp/api/abi/cpumask.h \
	odp/arch/default-linux/odp/api/abi/crypto.h \
	odp/arch/default-linux/odp/api/abi/debug.h \
	odp/arch/default-linux/odp/api/abi/dma_types.h \
	odp/arch/default-linux/odp/api/abi/errno.h \
	odp/arch/default-linux/odp/api/abi/event.h \
	odp/arch/default-linux/odp/api/abi/event_types.h \
	odp/arch/default-linux/odp/api/abi/hash.h \
	odp/arch/default-linux/odp/api/abi/init.h \
	odp/arch/default-linux/odp/api/abi/ipsec.h \
	odp/arch/default-linux/odp/api/abi/ipsec_types.h \
	odp/arch/default-linux/odp/api/abi/packet.h \
	odp/arch/default-linux/odp/api/abi/packet_types.h \
	odp/arch/default-linux/odp/api/abi/packet_flags.h \
	odp/arch/default-linux/odp/api/abi/packet_io.h \
	odp/arch/default-linux/odp/api/abi/packet_io_types.h \
	odp/arch/default-linux/odp/api/abi/pool.h \
	odp/arch/default-linux/odp/api/abi/pool_types.h \
	odp/arch/default-linux/odp/api/abi/proto_stats.h \
	odp/arch/default-linux/odp/api/abi/proto_stats_types.h \
	odp/arch/default-linux/odp/api/abi/queue.h \
	odp/arch/default-linux/odp/api/abi/queue_types.h \
	odp/arch/default-linux/odp/api/abi/random.h \
	odp/arch/default-linux/odp/api/abi/rwlock.h \
	odp/arch/default-linux/odp/api/abi/rwlock_recursive.h \
	odp/arch/default-linux/odp/api/abi/schedule.h \
	odp/arch/default-linux/odp/api/abi/schedule_types.h \
	odp/arch/default-linux/odp/api/abi/shared_memory.h \
	odp/arch/default-linux/odp/api/abi/spinlock.h \
	odp/arch/default-linux/odp/api/abi/spinlock_recursive.h \
	odp/arch/default-linux/odp/api/abi/stash.h \
	odp/arch/default-linux/odp/api/abi/stash_types.h \
	odp/arch/default-linux/odp/api/abi/std.h \
	odp/arch/default-linux/odp/api/abi/std_types.h \
	odp/arch/default-linux/odp/api/abi/sync.h \
	odp/arch/default-linux/odp/api/abi/thread.h \
	odp/arch/default-linux/odp/api/abi/thrmask.h \
	odp/arch/default-linux/odp/api/abi/ticketlock.h \
	odp/arch/default-linux/odp/api/abi/time.h \
	odp/arch/default-linux/odp/api/abi/timer.h \
	odp/arch/default-linux/odp/api/abi/timer_types.h \
	odp/arch/default-linux/odp/api/abi/traffic_mngr.h \
	odp/arch/default-linux/odp/api/abi/version.h
endif
if ARCH_IS_POWERPC
odpapiabiarchinclude_HEADERS = \
	odp/arch/power64-linux/odp/api/abi/align.h \
	odp/arch/power64-linux/odp/api/abi/atomic.h \
	odp/arch/power64-linux/odp/api/abi/barrier.h \
	odp/arch/power64-linux/odp/api/abi/buffer.h \
	odp/arch/power64-linux/odp/api/abi/byteorder.h \
	odp/arch/power64-linux/odp/api/abi/classification.h \
	odp/arch/power64-linux/odp/api/abi/comp.h \
	odp/arch/power64-linux/odp/api/abi/cpu.h \
	odp/arch/power64-linux/odp/api/abi/cpumask.h \
	odp/arch/power64-linux/odp/api/abi/crypto.h \
	odp/arch/power64-linux/odp/api/abi/debug.h \
	odp/arch/power64-linux/odp/api/abi/dma_types.h \
	odp/arch/power64-linux/odp/api/abi/errno.h \
	odp/arch/power64-linux/odp/api/abi/event.h \
	odp/arch/power64-linux/odp/api/abi/event_types.h \
	odp/arch/power64-linux/odp/api/abi/hash.h \
	odp/arch/power64-linux/odp/api/abi/init.h \
	odp/arch/power64-linux/odp/api/abi/ipsec.h \
	odp/arch/power64-linux/odp/api/abi/ipsec_types.h \
	odp/arch/power64-linux/odp/api/abi/packet.h \
	odp/arch/power64-linux/odp/api/abi/packet_types.h \
	odp/arch/power64-linux/odp/api/abi/packet_flags.h \
	odp/arch/power64-linux/odp/api/abi/packet_io.h \
	odp/arch/power64-linux/odp/api/abi/packet_io_types.h \
	odp/arch/power64-linux/odp/api/abi/pool.h \
	odp/arch/power64-linux/odp/api/abi/pool_types.h \
	odp/arch/power64-linux/odp/api/abi/proto_stats.h \
	odp/arch/power64-linux/odp/api/abi/proto_stats_types.h \
	odp/arch/power64-linux/odp/api/abi/queue.h \
	odp/arch/power64-linux/odp/api/abi/queue_types.h \
	odp/arch/power64-linux/odp/api/abi/random.h \
	odp/arch/power64-linux/odp/api/abi/rwlock.h \
	odp/arch/power64-linux/odp/api/abi/rwlock_recursive.h \
	odp/arch/power64-linux/odp/api/abi/schedule.h \
	odp/arch/power64-linux/odp/api/abi/schedule_types.h \
	odp/arch/power64-linux/odp/api/abi/shared_memory.h \
	odp/arch/power64-linux/odp/api/abi/spinlock.h \
	odp/arch/power64-linux/odp/api/abi/spinlock_recursive.h \
	odp/arch/power64-linux/odp/api/abi/stash.h \
	odp/arch/power64-linux/odp/api/abi/stash_types.h \
	odp/arch/power64-linux/odp/api/abi/std.h \
	odp/arch/power64-linux/odp/api/abi/std_types.h \
	odp/arch/power64-linux/odp/api/abi/sync.h \
	odp/arch/power64-linux/odp/api/abi/thread.h \
	odp/arch/power64-linux/odp/api/abi/thrmask.h \
	odp/arch/power64-linux/odp/api/abi/ticketlock.h \
	odp/arch/power64-linux/odp/api/abi/time.h \
	odp/arch/power64-linux/odp/api/abi/timer.h \
	odp/arch/power64-linux/odp/api/abi/timer_types.h \
	odp/arch/power64-linux/odp/api/abi/traffic_mngr.h \
	odp/arch/power64-linux/odp/api/abi/version.h
endif
if ARCH_IS_X86_32
odpapiabiarchinclude_HEADERS = \
	odp/arch/x86_32-linux/odp/api/abi/align.h \
	odp/arch/x86_32-linux/odp/api/abi/atomic.h \
	odp/arch/x86_32-linux/odp/api/abi/barrier.h \
	odp/arch/x86_32-linux/odp/api/abi/buffer.h \
	odp/arch/x86_32-linux/odp/api/abi/byteorder.h \
	odp/arch/x86_32-linux/odp/api/abi/classification.h \
	odp/arch/x86_32-linux/odp/api/abi/comp.h \
	odp/arch/x86_32-linux/odp/api/abi/cpu.h \
	odp/arch/x86_32-linux/odp/api/abi/cpumask.h \
	odp/arch/x86_32-linux/odp/api/abi/crypto.h \
	odp/arch/x86_32-linux/odp/api/abi/debug.h \
	odp/arch/x86_32-linux/odp/api/abi/dma_types.h \
	odp/arch/x86_32-linux/odp/api/abi/errno.h \
	odp/arch/x86_32-linux/odp/api/abi/event.h \
	odp/arch/x86_32-linux/odp/api/abi/event_types.h \
	odp/arch/x86_32-linux/odp/api/abi/hash.h \
	odp/arch/x86_32-linux/odp/api/abi/init.h \
	odp/arch/x86_32-linux/odp/api/abi/ipsec.h \
	odp/arch/x86_32-linux/odp/api/abi/ipsec_types.h \
	odp/arch/x86_32-linux/odp/api/abi/packet.h \
	odp/arch/x86_32-linux/odp/api/abi/packet_types.h \
	odp/arch/x86_32-linux/odp/api/abi/packet_flags.h \
	odp/arch/x86_32-linux/odp/api/abi/packet_io.h \
	odp/arch/x86_32-linux/odp/api/abi/packet_io_types.h \
	odp/arch/x86_32-linux/odp/api/abi/pool.h \
	odp/arch/x86_32-linux/odp/api/abi/pool_types.h \
	odp/arch/x86_32-linux/odp/api/abi/proto_stats.h \
	odp/arch/x86_32-linux/odp/api/abi/proto_stats_types.h \
	odp/arch/x86_32-linux/odp/api/abi/queue.h \
	odp/arch/x86_32-linux/odp/api/abi/queue_types.h \
	odp/arch/x86_32-linux/odp/api/abi/random.h \
	odp/arch/x86_32-linux/odp/api/abi/rwlock.h \
	odp/arch/x86_32-linux/odp/api/abi/rwlock_recursive.h \
	odp/arch/x86_32-linux/odp/api/abi/schedule.h \
	odp/arch/x86_32-linux/odp/api/abi/schedule_types.h \
	odp/arch/x86_32-linux/odp/api/abi/shared_memory.h \
	odp/arch/x86_32-linux/odp/api/abi/spinlock.h \
	odp/arch/x86_32-linux/odp/api/abi/spinlock_recursive.h \
	odp/arch/x86_32-linux/odp/api/abi/stash.h \
	odp/arch/x86_32-linux/odp/api/abi/stash_types.h \
	odp/arch/x86_32-linux/odp/api/abi/std.h \
	odp/arch/x86_32-linux/odp/api/abi/std_types.h \
	odp/arch/x86_32-linux/odp/api/abi/sync.h \
	odp/arch/x86_32-linux/odp/api/abi/thread.h \
	odp/arch/x86_32-linux/odp/api/abi/thrmask.h \
	odp/arch/x86_32-linux/odp/api/abi/ticketlock.h \
	odp/arch/x86_32-linux/odp/api/abi/time.h \
	odp/arch/x86_32-linux/odp/api/abi/timer.h \
	odp/arch/x86_32-linux/odp/api/abi/timer_types.h \
	odp/arch/x86_32-linux/odp/api/abi/traffic_mngr.h \
	odp/arch/x86_32-linux/odp/api/abi/version.h
endif
if ARCH_IS_X86_64
odpapiabiarchinclude_HEADERS = \
	odp/arch/x86_64-linux/odp/api/abi/align.h \
	odp/arch/x86_64-linux/odp/api/abi/atomic.h \
	odp/arch/x86_64-linux/odp/api/abi/barrier.h \
	odp/arch/x86_64-linux/odp/api/abi/buffer.h \
	odp/arch/x86_64-linux/odp/api/abi/byteorder.h \
	odp/arch/x86_64-linux/odp/api/abi/classification.h \
	odp/arch/x86_64-linux/odp/api/abi/comp.h \
	odp/arch/x86_64-linux/odp/api/abi/cpu.h \
	odp/arch/x86_64-linux/odp/api/abi/cpumask.h \
	odp/arch/x86_64-linux/odp/api/abi/crypto.h \
	odp/arch/x86_64-linux/odp/api/abi/debug.h \
	odp/arch/x86_64-linux/odp/api/abi/dma_types.h \
	odp/arch/x86_64-linux/odp/api/abi/errno.h \
	odp/arch/x86_64-linux/odp/api/abi/event.h \
	odp/arch/x86_64-linux/odp/api/abi/event_types.h \
	odp/arch/x86_64-linux/odp/api/abi/hash.h \
	odp/arch/x86_64-linux/odp/api/abi/init.h \
	odp/arch/x86_64-linux/odp/api/abi/ipsec.h \
	odp/arch/x86_64-linux/odp/api/abi/ipsec_types.h \
	odp/arch/x86_64-linux/odp/api/abi/packet.h \
	odp/arch/x86_64-linux/odp/api/abi/packet_types.h \
	odp/arch/x86_64-linux/odp/api/abi/packet_flags.h \
	odp/arch/x86_64-linux/odp/api/abi/packet_io.h \
	odp/arch/x86_64-linux/odp/api/abi/packet_io_types.h \
	odp/arch/x86_64-linux/odp/api/abi/pool.h \
	odp/arch/x86_64-linux/odp/api/abi/pool_types.h \
	odp/arch/x86_64-linux/odp/api/abi/proto_stats.h \
	odp/arch/x86_64-linux/odp/api/abi/proto_stats_types.h \
	odp/arch/x86_64-linux/odp/api/abi/queue.h \
	odp/arch/x86_64-linux/odp/api/abi/queue_types.h \
	odp/arch/x86_64-linux/odp/api/abi/random.h \
	odp/arch/x86_64-linux/odp/api/abi/rwlock.h \
	odp/arch/x86_64-linux/odp/api/abi/rwlock_recursive.h \
	odp/arch/x86_64-linux/odp/api/abi/schedule.h \
	odp/arch/x86_64-linux/odp/api/abi/schedule_types.h \
	odp/arch/x86_64-linux/odp/api/abi/shared_memory.h \
	odp/arch/x86_64-linux/odp/api/abi/spinlock.h \
	odp/arch/x86_64-linux/odp/api/abi/spinlock_recursive.h \
	odp/arch/x86_64-linux/odp/api/abi/stash.h \
	odp/arch/x86_64-linux/odp/api/abi/stash_types.h \
	odp/arch/x86_64-linux/odp/api/abi/std.h \
	odp/arch/x86_64-linux/odp/api/abi/std_types.h \
	odp/arch/x86_64-linux/odp/api/abi/sync.h \
	odp/arch/x86_64-linux/odp/api/abi/thread.h \
	odp/arch/x86_64-linux/odp/api/abi/thrmask.h \
	odp/arch/x86_64-linux/odp/api/abi/ticketlock.h \
	odp/arch/x86_64-linux/odp/api/abi/time.h \
	odp/arch/x86_64-linux/odp/api/abi/timer.h \
	odp/arch/x86_64-linux/odp/api/abi/timer_types.h \
	odp/arch/x86_64-linux/odp/api/abi/traffic_mngr.h \
	odp/arch/x86_64-linux/odp/api/abi/version.h
endif
endif # ODP_ABI_COMPAT

# Rerefence all nodist_*_HEADERS here
.PHONY: $(nodist_odpapispecinclude_HEADERS)
$(nodist_odpapispecinclude_HEADERS):
	$(MAKE) -C $(top_builddir) $(subdir)/$@
